2015/02/17
- Added queue docs.

2014/09/22 (1.2.40)
- Fixed wrong oggenc installation hint.
- Fixed database initialization.
- Fixed config file autocreation.
- Fixed next track selection.
- Improved pre-packaged file selection.

2014/07/16 (1.2.34)
- Fixed setting dupes to 0.
- Default dupes value is now 0.

2014/07/15 (1.2.33)
- Fixed bookmark status in `dump'.
- Fixed tagging of untagged tracks.
- Fixed exceptions when voting for tracks which never played.

2014/07/08 (1.2.31)
- Fixed token generation.
- Added an envar to debug email.
- Fixed an error with unnamed playlists.
- Fixed an error with logging unicode file names.

2014/07/07 (1.2.28)
- Added templates for token verification emails.
- Refresh tags from file before playing.
- Write tags to file on change.

2014/07/06 (1.2.26)
- New WebAPI endpoint: /skip (POST).
- Added listeners cound in status.json.
- Fixed an error in the built-in manual.
- Unified error handling and reporting.

2014/06/27 (1.2.24)
- WebAPI reports all tags in the cloud, not 5+ tracks only.

2014/06/26 (1.2.23)
- Revised WebAPI.
- Built-in docs for WebAPI.
- New web API method: track/update.json.
- New CLI command: ardj web tokens (lists active tokens).

2014/06/23 (1.2.20)
- New CLI command: ardj replaygain scan.

2014/06/20 (1.2.19)
- Removed useless sticky label debug logging.
- Changed label prefix from @ to a more convenient #.
- Fixed track skipping with ices.
- New CLI command: ardj skip.
- Monitor now checks children every 1 second, not 5.
- Fixed 'tags' output when there aren't any tags.
- New CLI command: ardj reload.
- Listener counter no longer needs admin access to icecast2.
- Can now run ices from source tree without preparing PYTHONPATH.

2014/06/19 (1.2.15)
- New command: ardj jabber probe.
- Added back support for ices0, because of crossfade and ReplayGain.
- Enable logging from within bin/ardj.
- Better support for running from within the source tree.
- Fixed the status command failing on new databases.